# ParallelTNNLayers

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  current_results.txt  results.txt  resultsCPwrong.txt  resultsCPwrong2.txt  resultsHyperblockWrong.txt  resultsNV.txt  resultsScaleChannelRank.txt  rslts.txt  tmp.cu
Cuda_kernels/: CMakeLists.txt  CudaAllocator.cpp.cu  CudaAllocator.cu  CudaAllocator.cuh  CudaAllocator.h  FullConv2d.cu  Makefile  NVConv2d.cu  NVConv2d.cuh  Tensor.cc  Tensor.cpp  Tensor.cpp.cu  Tensor.cu  Tensor.cuh  Tensor.h  Utils.cpp  Utils.cpp.cu  Utils.cu  Utils.cuh  Utils.h  conv.cu  conv.cuh  conv_loopn.cu  conv_utils.cc  conv_utils.cpp.cu  conv_utils.h  cp4Conv2d.cpp.cu  cp4Conv2d.cu  cp4Conv2d.cuh  cp4Conv2d.h  cp4Conv2dBackwardData.cu  cp4Conv2dBackwardData.cuh  cp4Conv2dBackwardFilter.cu  cp4Conv2dBackwardFilter.cuh  cp4Conv2dForward.cu  cp4Conv2dForward.cuh  cpu_conv2d.cc  cpu_conv2d.h  cudnnConv2d.cpp.cu  cudnnConv2d.cu  (+16 more)
Cuda_kernels/Cuda_kernels/: Tensor.h  conv_utils.h  cpu_conv2d.h  cudnn_full_conv2d.h  manual.h
Cuda_kernels/bench/: BenchBoth.cu  BenchBothMem.cu  BenchBothTime.cu  BenchCP4.cu  BenchCP4BatchSize.cu  BenchCP4ChannelDepth.cu  BenchCP4FilterCount.cu  BenchCP4FilterSize.cu  BenchCP4ImageSize.cu  BenchCP4SingleTensor.cu  BenchNV.cu  benchFullConv2d.cpp.cu  bench_NVConv2d.cpp.cu  bench_NVConv2d.sh  bench_conv2d.cpp.cu  bench_cp4Conv2d.cpp.cu  bench_cp4Conv2d.sh  bench_generic.cu  bench_shrd.cpp.cu  single_tensor.txt  tensors.txt  tensors_alexnet.txt  tensors_all_scales.txt  tensors_batch_size.h  tensors_batch_size.txt  tensors_channel_depth.txt  tensors_filter_count.h  tensors_filter_count.txt  tensors_filter_size.txt  tensors_image_size.h  tensors_vgg16.txt
Cuda_kernels/results/: AlexNet_flop_plot.tex  AlexNet_flop_table.tex  AlexNet_mem_plot.tex  AlexNet_mem_table.tex  AlexNet_pairwise__time_plot.tex  AlexNet_pairwise__time_table.tex  AlexNet_plot.tex  AlexNet_table.tex  AlexNet_time_table.tex  Benchmark plots RTX 2070 Aug 15 12 08.ipynb  Benchmark plots RTX2070 20190813.ipynb  Benchmark plots RTX2070 20190815.ipynb  Benchmark plots RTX2070 20190817-Copy1.ipynb  Benchmark plots RTX2070 20190817.ipynb  Benchmark plots RTX2070 20190828.ipynb  Benchmark plots RTX2080Ti 20190904.ipynb  Benchmark plots scratch.ipynb  Benchmark plots.ipynb  BothConv2dForward_results_2080ti_190904a_alexnet.txt  BothConv2dForward_results_filter_mem_bytes_2080ti_190908a_alexnet.txt  BothConv2dForward_results_flop_2080ti_190908a_alexnet.txt  BothConv2dForward_results_flop_tf_pairwise_2080ti_190908a_alexnet.txt  BothConv2dForward_results_in_mem_bytes_2080ti_190908a_alexnet.txt  BothConv2dForward_results_mem_KiB_2080ti_190908a_alexnet.txt  BothConv2dForward_results_out_mem_bytes_2080ti_190908a_alexnet.txt  BothConv2dForward_results_tf_pairwise_time_2080_ti_190908a_alexnet.txt  BothConv2dForward_results_work_mem_bytes_2080ti_190908a_alexnet.txt  CP4Conv2dForward_results.txt  CP4Conv2dForward_results_2070-190817a_all_scales.txt  CP4Conv2dForward_results_2070-190817a_batch_size.txt  CP4Conv2dForward_results_2070-190817a_channel_depth.txt  CP4Conv2dForward_results_2070-190817a_filter_count.txt  CP4Conv2dForward_results_2070-190817a_filter_size.txt  CP4Conv2dForward_results_2070-190817a_image_size.txt  CP4Conv2dForward_results_2070-190818_BatchSize.txt  CP4Conv2dForward_results_2070-190818_ChannelDepth.txt  CP4Conv2dForward_results_2070-190818_FilterCount.txt  CP4Conv2dForward_results_2070-190818_FilterSize.txt  CP4Conv2dForward_results_2070-190818_ImageSize.txt  CP4Conv2dForward_results_2070_190828_alexnet.txt  (+58 more)
Cuda_kernels/src/: CudaAllocator.cpp.cu  Tensor.cpp.cu  conv_utils.cpp.cu  cudnn_full_conv2d.cpp.cu  goldsborough.cu  manual.cpp.cu
Cuda_kernels/test/: test_Conv.cpp.cu  test_FullConv2d.cpp.cu  test_NVConv2d.cpp.cu  test_Tensor.cpp.cu  test_Utils.cpp.cu  test_cp4Conv.cpp.cu  test_cudnnConv2d.cpp.cu  test_cudnn_full_conv2d.cpp.cu  test_tvm_cp4_conv2d.cpp.cu
Kernels/: CMakeLists.txt  Makefile  add_one_op_kernel.cu.cc  basic_cublas_example.out  cp4_conv_nchw.cc  cp4_conv_nchw.cu  cp_0_nhwc.cc  cp_0_nhwc.cu  cp_forward_nchw.cu  cp_forward_unfused.cc  cp_forward_unfused.cu  cp_fused_nchw.cc  cp_fused_nchw.cu  cp_fused_nchw_1.cc  cp_fused_nchw_1.cu  cp_fused_nchw_64.cu  cp_fused_nchw_8.cc  cuda_op_kernel.cu.cc  cudnn_full_conv2d.cu  dense_cp.cc  dense_cp.cu  manual  manual.cu  nmode_3_2_op_kernel.cu.cc  nmode_3_2_op_kernel_test.py  nmode_4_2_op_kernel.cu  rcp_fused_nchw.cc  rcp_fused_nchw.cu  rcp_fused_nchw_8.cu  tvm_cp4_conv2d.cu  zero_out.cc
Kernels/test/: zero_out_op_test.py
Kernels/unused/: add_one_op_kernel.cc  cp_forward_unfused.cc  cp_forward_unfused.cu  cp_fused_nchw_64.cc  cp_nchw.cu  example.cu  multi_conv0_conv1_outer2_op_kernel.cc  nmode_3_2_op_kernel.cc  nmode_3_2_op_kernel_test.py  nmode_4_2_op_kernel.cu  rcp_fused_nchw_64.cu
Sequence/: netcon.py
benchmarks/: _old_conv2d_cp_fused.py  bench_conv2d_cp_fused.py  bench_conv2d_cp_fused_64.py  bench_cp_conv_comp.py  cp_conv_comp.py
results/: generate_plots.py
test/: bench_conv2d_cp_fused.py  benchmark_conv2d_cp.py  benchmark_conv2d_cp4.py  benchmark_conv2d_rcp.py  benchmark_dense_cp.py  decomp_filters.py  layers.py  profile_cp4.py  run_all.sh  test_conv2d_cp.py  test_conv2d_cp4.py  test_conv2d_cp_fused.py  test_conv2d_cp_fused_64.py  test_conv2d_normal.py  test_conv2d_rcp.py  test_conv2d_rcp_fused.py  test_cp_forward_0.py  test_dense_cp.py  utils.py  zero_out_op_test.py
utils/: CMakeLists.txt  cuda_device_properties.cu  decomp_filters.py  layers.py  utils.py
